# cntm-graph

./: .gitignore  .tasks_billion_scale.md  .tasks_ffi_hardening.md  .tasks_graph_explorer.md  .tasks_performance_ci.md  .tasks_release.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DESIGN_DECISIONS.md  Dockerfile  FAQ.md  GEMINI.md  LICENSE.md  MANIFESTO.md  PHILOSOPHY.md  PRINCIPLES.md  README.md  ROADMAP.md  SECURITY.md  STRATEGY.md  STRUCTURE.tree  SUPPORT.md  TROUBLESHOOTING.md  USER_GUIDE.md  VISION.md  docker-compose.yml  pixi.toml  sonar-project.properties  test_metadata.bin.delta
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  performance.yml  security.yml
benches/: traversal_bench.rs
docs/superpowers/plans/: 2026-04-15-hybrid-dod-graph-kernel.md  2026-04-15-mmap-refactor.md  2026-04-15-simd-traversal.md  2026-04-17-flatbuffers-metadata.md  2026-04-27-performance-ci-benchmarking.md  2026-05-01-graph-explorer-ui.md  (+6 more)
examples/: analyze_memory.rs  e2e_writer.rs  isotime_mock_watcher.rs  stress_test_1b.rs  verify_guards.rs  verify_offsets.rs
explorer/: index.html  package-lock.json  package.json
explorer/src/: App.vue  style.css
locales/: README.ja.md  README.th.md  README.zh.md
schema/: metadata.fbs
scripts/: analyze_bench.py  run_e2e.sh
src/: helper.c  lib.rs  main.mojo  metadata.fbs  metadata.rs  metadata_generated.rs
verification/: Graph.lean  Memory.lean  Safety.lean  lake-manifest.json  lakefile.toml  verification.lean
(+17 files in other folders)
