[package]
name = "cntm-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
memmap2 = "0.9"
flatbuffers = "25.1.24"
aligned-vec = "0.5"
rand = { version = "0.8", features = ["small_rng"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = 'abort'
strip = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "traversal_bench"
harness = false
